added row/col/size and add'l attributes to style

--- a/views/about.html
+++ b/views/about.html
@@ -1,1 +1,5 @@
- about
+<div class="vert">
+    <div class="container">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis, ratione aut laudantium sit ducimus at sed, a, quos quibusdam vero veniam voluptates illum deleniti pariatur! Error at, itaque! Quasi, deserunt.
+    </div>
+</div>
