--- a/views/events.html
+++ b/views/events.html
@@ -1,1 +1,38 @@
-events
+<h3 class="center">Events</h3>
+<div class="container">
+    <div class="row">
+        <div class="s12">
+            Event
+            <p>
+                Description. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium facilis, a cumque perferendis, nobis quas sit ut dolorem, nihil dolorum laboriosam qui minus perspiciatis, quisquam officia et dolores suscipit sapiente.
+            </p>
+        </div>
+    </div>
+    <hr>
+    <div class="row">
+        <div class="s12">
+            Event
+            <p>
+                Description. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium facilis, a cumque perferendis, nobis quas sit ut dolorem, nihil dolorum laboriosam qui minus perspiciatis, quisquam officia et dolores suscipit sapiente.
+            </p>
+        </div>
+    </div>
+    <hr>
+    <div class="row">
+        <div class="s12">
+            Event
+            <p>
+                Description. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium facilis, a cumque perferendis, nobis quas sit ut dolorem, nihil dolorum laboriosam qui minus perspiciatis, quisquam officia et dolores suscipit sapiente.
+            </p>
+        </div>
+    </div>
+    <hr>
+    <div class="row">
+        <div class="s12">
+            Event
+            <p>
+                Description. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium facilis, a cumque perferendis, nobis quas sit ut dolorem, nihil dolorum laboriosam qui minus perspiciatis, quisquam officia et dolores suscipit sapiente.
+            </p>
+        </div>
+    </div>
+</div>
