corrected navbar, reformatted events, added general layout of gallery

--- a/views/gallery.html
+++ b/views/gallery.html
@@ -1,1 +1,35 @@
-gallery
+<div class="vert center">
+    <div class="container">
+        <div class="row">
+            <div class="s12">
+                <div class="row">
+                    <div class="col s6">
+                        img one
+                    </div>
+                    <div class="col s6">
+                        img two
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col s4">
+                        img
+                    </div>
+                    <div class="col s4">
+                        img
+                    </div>
+                    <div class="col s4">
+                        img
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col s6">
+                        img one
+                    </div>
+                    <div class="col s6">
+                        img two
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
