--- a/css/style.css
+++ b/css/style.css
@@ -5,12 +5,14 @@ html {
 }
 
 .home-bg {
-/*    background-image: url(../img/pubhome.jpg);
-*/}
+    /*    background-image: url(../img/pubhome.jpg);
+*/
+}
 
 .about-bg {
-/*    background-image: url(../img/pubabout.jpg);
-*/}
+    /*    background-image: url(../img/pubabout.jpg);
+*/
+}
 
 .contact-bg {}
 
@@ -19,6 +21,10 @@ html {
 .gallery-bg {}
 
 .events-bg {}
+
+body {
+    margin: 0;
+}
 
 ul li {
     text-decoration: none;
@@ -33,6 +39,25 @@ li {
 
 a {
     text-decoration: none;
+    color: white;
+}
+
+.nav {
+    background-color: grey;
+    width: 100%;
+    height: 56px;
+    line-height: 56px;
+    text-align: center;
+    margin-top: 0;
+    display: block;
+}
+
+.nav ul {
+    margin: 0;
+}
+
+nav.a {
+    color: white;
 }
 
 
@@ -64,6 +89,11 @@ a {
     width: 90%;
 }
 
+.container .row {
+    margin-left: -0.75rem;
+    margin-right: -0.75rem;
+}
+
 @media only screen and (min-width: 601px) {
     .container {
         width: 85%;
@@ -83,6 +113,19 @@ a {
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 15px;
+}
+
+.row:after {
+    content: "";
+    display: table;
+    clear: both;
+}
+
+.row .col {
+    float: left;
+    box-sizing: border-box;
+    padding: 0 0.75rem;
+    min-height: 1px;
 }
 
 .row .col.s1 {
