--- a/views/navbar.html
+++ b/views/navbar.html
@@ -1,8 +1,10 @@
-<ul class="center">
-    <li class="left"><a href="/">Home</a></li>
-    <li><a href="/about">About</a></li>
-    <li><a href="/events">Events</a></li>
-    <li><a href="/gallery">Gallery</a></li>
-    <li><a href="/press">Press</a></li>
-    <li><a href="/contact">Contact</a></li>
-</ul>
+<nav class="nav">
+    <ul>
+        <li class="left"><a href="/">Home</a></li>
+        <li><a href="/about">About</a></li>
+        <li><a href="/events">Events</a></li>
+        <li><a href="/gallery">Gallery</a></li>
+        <li><a href="/press">Press</a></li>
+        <li><a href="/contact">Contact</a></li>
+    </ul>
+</nav>
