--- a/css/style.css
+++ b/css/style.css
@@ -83,6 +83,14 @@ nav.a {
     margin-top: 10em;
 }
 
+.vert-event {
+    margin-top: 5em;
+}
+
+.vert-layout {
+    margin-top: 4em;
+}
+
 .container {
     margin: 0 auto;
     max-width: 100%;
