--- a/views/events.html
+++ b/views/events.html
@@ -1,29 +1,30 @@
-<h3 class="center">Events</h3>
-<div class="container">
-    <div class="row">
-        <div class="s12">
-            Event
-            <p>
-                Description. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium facilis, a cumque perferendis, nobis quas sit ut dolorem, nihil dolorum laboriosam qui minus perspiciatis, quisquam officia et dolores suscipit sapiente.
-            </p>
+<div class="vert-event">
+    <div class="container">
+        <div class="row">
+            <div class="s12">
+                Event
+                <p>
+                    Description. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium facilis, a cumque perferendis, nobis quas sit ut dolorem, nihil dolorum laboriosam qui minus perspiciatis, quisquam officia et dolores suscipit sapiente.
+                </p>
+            </div>
         </div>
-    </div>
-    <hr>
-    <div class="row">
-        <div class="s12">
-            Event
-            <p>
-                Description. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium facilis, a cumque perferendis, nobis quas sit ut dolorem, nihil dolorum laboriosam qui minus perspiciatis, quisquam officia et dolores suscipit sapiente.
-            </p>
+        <hr>
+        <div class="row">
+            <div class="s12">
+                Event
+                <p>
+                    Description. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium facilis, a cumque perferendis, nobis quas sit ut dolorem, nihil dolorum laboriosam qui minus perspiciatis, quisquam officia et dolores suscipit sapiente.
+                </p>
+            </div>
         </div>
-    </div>
-    <hr>
-    <div class="row">
-        <div class="s12">
-            Event
-            <p>
-                Description. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium facilis, a cumque perferendis, nobis quas sit ut dolorem, nihil dolorum laboriosam qui minus perspiciatis, quisquam officia et dolores suscipit sapiente.
-            </p>
+        <hr>
+        <div class="row">
+            <div class="s12">
+                Event
+                <p>
+                    Description. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium facilis, a cumque perferendis, nobis quas sit ut dolorem, nihil dolorum laboriosam qui minus perspiciatis, quisquam officia et dolores suscipit sapiente.
+                </p>
+            </div>
         </div>
     </div>
 </div>
