--- a/views/navbar.html
+++ b/views/navbar.html
@@ -4,7 +4,7 @@
         <li><a href="/about">About</a></li>
         <li><a href="/events">Events</a></li>
         <li><a href="/gallery">Gallery</a></li>
-        <li><a href="/press">Press</a></li>
+        <li><a href="/layout">The Bar</a></li>
         <li><a href="/contact">Contact</a></li>
     </ul>
 </nav>
