--- a/views/contact.html
+++ b/views/contact.html
@@ -1,1 +1,29 @@
-contact
+<div class="vert-layout">
+    <div class="container">
+        <div class="row">
+            <div class="col s6">
+                <h4>Hours</h4>
+                <p>??????????</p>
+                <h5>Happy Hour</h5>
+                <p>all day everyday</p>
+                <h4>Contact</h4>
+                <p>email</p>
+                <div class="row">
+                    <div class="col s1">
+                        fb
+                    </div>
+                    <div class="col s1">
+                        tw
+                    </div>
+                    <div class="col s1">
+                        ig
+                    </div>
+                </div>
+            </div>
+            <div class="col s6 center">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2689.5690750809254!2d-122.32585044865301!3d47.61506827908312!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x54906acb61cca5f9%3A0xf26fba72b9099b47!2sR+Place!5e0!3m2!1sen!2sus!4v1497400268542" width="300" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
+                <br />
+            </div>
+        </div>
+    </div>
+</div>
