--- a/views/gallery.html
+++ b/views/gallery.html
@@ -1,32 +1,43 @@
-<div class="vert center">
+<div class="vert-layout">
     <div class="container">
         <div class="row">
             <div class="s12">
                 <div class="row">
-                    <div class="col s6">
-                        img one
-                    </div>
-                    <div class="col s6">
-                        img two
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col s4">
-                        img
-                    </div>
-                    <div class="col s4">
-                        img
-                    </div>
-                    <div class="col s4">
-                        img
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col s6">
-                        img one
-                    </div>
-                    <div class="col s6">
-                        img two
+                    <div class="s12 gallery">
+                        <div class="row">
+                            <div class="col s6">
+                                <a href="">
+                                    <img class="img-shrink" src="img/pubabout.jpg"></a>
+                            </div>
+                            <div class="col s6">
+                                <a href="">
+                                    <img class="img-shrink" src="img/pubabout.jpg"></a>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col s4">
+                                <a href="">
+                                    <img class="img-shrink" src="img/pubabout.jpg"></a>
+                            </div>
+                            <div class="col s4">
+                                <a href="">
+                                    <img class="img-shrink" src="img/pubabout.jpg"></a>
+                            </div>
+                            <div class="col s4">
+                                <a href="">
+                                    <img class="img-shrink" src="img/pubabout.jpg"></a>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col s6">
+                                <a href="">
+                                    <img class="img-shrink" src="img/pubabout.jpg"></a>
+                            </div>
+                            <div class="col s6">
+                                <a href="">
+                                    <img class="img-shrink" src="img/pubabout.jpg"></a>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
