--- a/views/about.html
+++ b/views/about.html
@@ -1,5 +1,5 @@
 <div class="vert">
-    <div class="container">
+    <div class="contained">
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis, ratione aut laudantium sit ducimus at sed, a, quos quibusdam vero veniam voluptates illum deleniti pariatur! Error at, itaque! Quasi, deserunt.
     </div>
 </div>
