--- a/views/events.html
+++ b/views/events.html
@@ -1,6 +1,6 @@
-<div class="vert-event">
-    <div class="container">
-        <div class="row">
+<div class="vert-layout">
+    <div class="contained">
+        <div class="row-set">
             <div class="s12">
                 Event
                 <p>
@@ -9,7 +9,7 @@
             </div>
         </div>
         <hr>
-        <div class="row">
+        <div class="row-set">
             <div class="s12">
                 Event
                 <p>
@@ -18,7 +18,7 @@
             </div>
         </div>
         <hr>
-        <div class="row">
+        <div class="row-set">
             <div class="s12">
                 Event
                 <p>
