--- a/views/gallery.html
+++ b/views/gallery.html
@@ -1,45 +1,33 @@
-<div class="vert-layout">
-    <div class="container">
-        <div class="row">
-            <div class="s12">
-                <div class="row">
-                    <div class="s12 gallery">
-                        <div class="row">
-                            <div class="col s6">
-                                <a href="">
-                                    <img class="img-shrink" src="img/pubabout.jpg"></a>
-                            </div>
-                            <div class="col s6">
-                                <a href="">
-                                    <img class="img-shrink" src="img/pubabout.jpg"></a>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col s4">
-                                <a href="">
-                                    <img class="img-shrink" src="img/pubabout.jpg"></a>
-                            </div>
-                            <div class="col s4">
-                                <a href="">
-                                    <img class="img-shrink" src="img/pubabout.jpg"></a>
-                            </div>
-                            <div class="col s4">
-                                <a href="">
-                                    <img class="img-shrink" src="img/pubabout.jpg"></a>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col s6">
-                                <a href="">
-                                    <img class="img-shrink" src="img/pubabout.jpg"></a>
-                            </div>
-                            <div class="col s6">
-                                <a href="">
-                                    <img class="img-shrink" src="img/pubabout.jpg"></a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+<div class="vert-gallery">
+    <div class="contain-flex">
+        <div class="flex-row row-set">
+            <div class="col s4">
+                <img class="img-shrink" src="../img/pubhome.jpg">
+            </div>
+            <div class="col s4">
+                <img class="img-shrink" src="../img/pubhome.jpg">
+            </div>
+            <div class="col s4">
+                <img class="img-shrink" src="../img/pubhome.jpg">
+            </div>
+        </div>
+        <div class="flex-row row-set">
+            <div class="col s6">
+                <img class="img-fit" src="../img/pubhome.jpg">
+            </div>
+            <div class="col s6">
+                <img class="img-fit" src="../img/pubhome.jpg">
+            </div>
+        </div>
+        <div class="flex-row row-set">
+            <div class="col s4">
+                <img class="img-shrink" src="../img/pubhome.jpg">
+            </div>
+            <div class="col s4">
+                <img class="img-shrink" src="../img/pubhome.jpg">
+            </div>
+            <div class="col s4">
+                <img class="img-shrink" src="../img/pubhome.jpg">
             </div>
         </div>
     </div>
