--- a/views/home.html
+++ b/views/home.html
@@ -1,5 +1,34 @@
-<div class="vert">
-    <div class="container">
-        home
+<div class="vert-home">
+    <div class="contain-flex">
+        <div class="home-box">
+            <div class="flex-row row-set">
+                <div class="col s12">
+                    <div class="logo">
+                        Lambda&sup3;
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div id="event-box">
+            <div class="flex-row row-set">
+                <div class="col s6">
+                    <span class="ev-title">Upcoming Events</span>
+                </div>
+                <div class="col s6 link-align">
+                    <span class="ev-not-title">View All Events</span>
+                </div>
+            </div>
+            <div class="flex-row row-set event-slide-box">
+                <div class="col s3 ev-pad">
+                    <img class="img-fit" src="../img/pubabout.jpg">
+                </div>
+                <div class="col s3 ev-pad">
+                    <img class="img-fit" src="../img/pubabout.jpg">
+                </div>
+                <div class="col s3 ev-pad">
+                    <img class="img-fit" src="../img/pubabout.jpg">
+                </div>
+                <div class="col s3 ev-pad"> </div>
+            </div>
+        </div>
     </div>
-</div>
