--- a/views/navbar.html
+++ b/views/navbar.html
@@ -1,10 +1,11 @@
-<nav class="nav">
+<nav class="navi">
     <ul>
-        <li class="left"><a href="/">Home</a></li>
+        <li class="place-left"><a href="/">Home</a></li>
         <li><a href="/about">About</a></li>
         <li><a href="/events">Events</a></li>
         <li><a href="/gallery">Gallery</a></li>
         <li><a href="/layout">The Bar</a></li>
+        <li><a href="/test">Test</a></li>
         <li><a href="/contact">Contact</a></li>
     </ul>
 </nav>
