--- a/views/gallery.html
+++ b/views/gallery.html
@@ -1,33 +1,49 @@
 <div class="vert-gallery">
     <div class="contain-flex">
-        <div class="flex-row row-set">
+        <div class="flex-row row-set gallery">
             <div class="col s4">
-                <img class="img-shrink" src="../img/pubhome.jpg">
+                <a href="">
+                    <img class="img-shrink gallery-pic" src="../img/pubhome.jpg">
+                </a>
             </div>
             <div class="col s4">
-                <img class="img-shrink" src="../img/pubhome.jpg">
+                <a href="">
+                    <img class="img-shrink gallery-pic" src="../img/pubhome.jpg">
+                </a>
             </div>
             <div class="col s4">
-                <img class="img-shrink" src="../img/pubhome.jpg">
+                <a href="">
+                    <img class="img-shrink gallery-pic" src="../img/pubhome.jpg">
+                </a>
             </div>
         </div>
         <div class="flex-row row-set">
             <div class="col s6">
-                <img class="img-fit" src="../img/pubhome.jpg">
+                <a href="">
+                    <img class="img-fit gallery-pic" src="../img/pubhome.jpg">
+                </a>
             </div>
             <div class="col s6">
-                <img class="img-fit" src="../img/pubhome.jpg">
+                <a href="">
+                    <img class="img-fit gallery-pic" src="../img/pubhome.jpg">
+                </a>
             </div>
         </div>
         <div class="flex-row row-set">
             <div class="col s4">
-                <img class="img-shrink" src="../img/pubhome.jpg">
+                <a href="">
+                    <img class="img-shrink gallery-pic" src="../img/pubhome.jpg">
+                </a>
             </div>
             <div class="col s4">
-                <img class="img-shrink" src="../img/pubhome.jpg">
+                <a href="">
+                    <img class="img-shrink gallery-pic" src="../img/pubhome.jpg">
+                </a>
             </div>
             <div class="col s4">
-                <img class="img-shrink" src="../img/pubhome.jpg">
+                <a href="">
+                    <img class="img-shrink gallery-pic" src="../img/pubhome.jpg">
+                </a>
             </div>
         </div>
     </div>
