--- a/views/about.html
+++ b/views/about.html
@@ -1,4 +1,4 @@
-<div class="vert">
+<div class="vert about-box">
     <div class="contained">
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis, ratione aut laudantium sit ducimus at sed, a, quos quibusdam vero veniam voluptates illum deleniti pariatur! Error at, itaque! Quasi, deserunt.
     </div>
