--- a/views/contact.html
+++ b/views/contact.html
@@ -1,4 +1,4 @@
-<div class="vert-layout">
+<div class="vert-layout contact-box">
     <div class="contained">
         <div class="row-set">
             <div class="col s6">
