--- a/views/events.html
+++ b/views/events.html
@@ -1,29 +1,111 @@
-<div class="vert-layout">
-    <div class="contained">
-        <div class="row-set">
-            <div class="s12">
-                Event
-                <p>
-                    Description. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium facilis, a cumque perferendis, nobis quas sit ut dolorem, nihil dolorum laboriosam qui minus perspiciatis, quisquam officia et dolores suscipit sapiente.
-                </p>
-            </div>
-        </div>
-        <hr>
-        <div class="row-set">
-            <div class="s12">
-                Event
-                <p>
-                    Description. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium facilis, a cumque perferendis, nobis quas sit ut dolorem, nihil dolorum laboriosam qui minus perspiciatis, quisquam officia et dolores suscipit sapiente.
-                </p>
-            </div>
-        </div>
-        <hr>
-        <div class="row-set">
-            <div class="s12">
-                Event
-                <p>
-                    Description. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium facilis, a cumque perferendis, nobis quas sit ut dolorem, nihil dolorum laboriosam qui minus perspiciatis, quisquam officia et dolores suscipit sapiente.
-                </p>
+<div class="contain-flex">
+    <div class="flex-row">
+        <div class="vert-event event-page">
+            <div class="contained">
+                <div class="row-set">
+                    <div class="col s12">
+                        <div class="row-set">
+                            <div class="col s12">
+                                Event
+                            </div>
+                        </div>
+                        <div class="row-set event-row">
+                            <div class="col s6 event-col">
+                                <img class="img-shrink" src="../img/buildinglayout.jpg">
+                            </div>
+                            <div class="col s6 event-col">
+                                Description. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium facilis, a cumque perferendis, nobis quas sit ut dolorem, nihil dolorum laboriosam qui minus perspiciatis, quisquam officia et dolores suscipit sapiente.
+                                <p class="center">
+                                    <button type="button" class="btn btn-primary">MORE INFO</button>
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <hr>
+                <div class="row-set">
+                    <div class="col s12">
+                        <div class="row-set">
+                            <div class="col s12">
+                                Event
+                            </div>
+                        </div>
+                        <div class="row-set event-row">
+                            <div class="col s6 event-col">
+                                <img class="img-shrink" src="../img/buildinglayout.jpg">
+                            </div>
+                            <div class="col s6 event-col">
+                                Description. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium facilis, a cumque perferendis, nobis quas sit ut dolorem, nihil dolorum laboriosam qui minus perspiciatis, quisquam officia et dolores suscipit sapiente.
+                                <p class="center">
+                                    <button type="button" class="btn btn-primary">MORE INFO</button>
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <hr>
+                <div class="row-set">
+                    <div class="col s12">
+                        <div class="row-set">
+                            <div class="col s12">
+                                Event
+                            </div>
+                        </div>
+                        <div class="row-set event-row">
+                            <div class="col s6 event-col">
+                                <img class="img-shrink" src="../img/buildinglayout.jpg">
+                            </div>
+                            <div class="col s6 event-col">
+                                Description. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium facilis, a cumque perferendis, nobis quas sit ut dolorem, nihil dolorum laboriosam qui minus perspiciatis, quisquam officia et dolores suscipit sapiente.
+                                <p class="center">
+                                    <button type="button" class="btn btn-primary">MORE INFO</button>
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <hr>
+                <div class="row-set">
+                    <div class="col s12">
+                        <div class="row-set">
+                            <div class="col s12">
+                                Event
+                            </div>
+                        </div>
+                        <div class="row-set event-row">
+                            <div class="col s6 event-col">
+                                <img class="img-shrink" src="../img/buildinglayout.jpg">
+                            </div>
+                            <div class="col s6 event-col">
+                                Description. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium facilis, a cumque perferendis, nobis quas sit ut dolorem, nihil dolorum laboriosam qui minus perspiciatis, quisquam officia et dolores suscipit sapiente.
+                                <p class="center">
+                                    <button type="button" class="btn btn-primary">MORE INFO</button>
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <hr>
+                <div class="row-set">
+                    <div class="col s12">
+                        <div class="row-set">
+                            <div class="col s12">
+                                Event
+                            </div>
+                        </div>
+                        <div class="row-set event-row">
+                            <div class="col s6 event-col">
+                                <img class="img-shrink" src="../img/buildinglayout.jpg">
+                            </div>
+                            <div class="col s6 event-col">
+                                Description. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium facilis, a cumque perferendis, nobis quas sit ut dolorem, nihil dolorum laboriosam qui minus perspiciatis, quisquam officia et dolores suscipit sapiente.
+                                <p class="center">
+                                    <button type="button" class="btn btn-primary">MORE INFO</button>
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
