--- a/views/layout.html
+++ b/views/layout.html
@@ -1,15 +1,11 @@
-<div class="vert-layout">
+<div class="vert-layout contact-box">
     <div class="contain-flex">
         <div class="flex-row row-set">
-            <div class="col s12">
+            <div class="col s6 layout-img">
                 Some info about the layout of the bar. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae, modi repudiandae quas adipisci vel omnis nesciunt, laborum suscipit et dolor vitae sequi asperiores, ipsa perferendis! Hic veritatis cupiditate ratione iste.
             </div>
-        </div>
-    </div>
-    <div class="contain-flex">
-        <div class="flex-row layout-img">
-            <div class="col s12">
-                <img class="img-shrink" src="img/pubhome.jpg">
+            <div class="col s6 layout-img">
+                <img src="img/pubhome.jpg">
             </div>
         </div>
     </div>
