replacing filler content, correcting formatting issues

--- a/views/events.html
+++ b/views/events.html
@@ -2,6 +2,7 @@
     <div class="flex-row">
         <div class="vert-event event-page">
             <div class="contained">
+                <h4 class="centered">June</h4>
                 <div class="row-set">
                     <div class="col s12">
                         <div class="row-set">
@@ -15,7 +16,7 @@
                             </div>
                             <div class="col s6 event-col">
                                 Description. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium facilis, a cumque perferendis, nobis quas sit ut dolorem, nihil dolorum laboriosam qui minus perspiciatis, quisquam officia et dolores suscipit sapiente.
-                                <p class="center">
+                                <p class="centered">
                                     <button type="button" class="btn btn-primary">MORE INFO</button>
                                 </p>
                             </div>
@@ -36,7 +37,7 @@
                             </div>
                             <div class="col s6 event-col">
                                 Description. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium facilis, a cumque perferendis, nobis quas sit ut dolorem, nihil dolorum laboriosam qui minus perspiciatis, quisquam officia et dolores suscipit sapiente.
-                                <p class="center">
+                                <p class="centered">
                                     <button type="button" class="btn btn-primary">MORE INFO</button>
                                 </p>
                             </div>
@@ -57,7 +58,7 @@
                             </div>
                             <div class="col s6 event-col">
                                 Description. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium facilis, a cumque perferendis, nobis quas sit ut dolorem, nihil dolorum laboriosam qui minus perspiciatis, quisquam officia et dolores suscipit sapiente.
-                                <p class="center">
+                                <p class="centered">
                                     <button type="button" class="btn btn-primary">MORE INFO</button>
                                 </p>
                             </div>
@@ -78,7 +79,7 @@
                             </div>
                             <div class="col s6 event-col">
                                 Description. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium facilis, a cumque perferendis, nobis quas sit ut dolorem, nihil dolorum laboriosam qui minus perspiciatis, quisquam officia et dolores suscipit sapiente.
-                                <p class="center">
+                                <p class="centered">
                                     <button type="button" class="btn btn-primary">MORE INFO</button>
                                 </p>
                             </div>
@@ -99,7 +100,7 @@
                             </div>
                             <div class="col s6 event-col">
                                 Description. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium facilis, a cumque perferendis, nobis quas sit ut dolorem, nihil dolorum laboriosam qui minus perspiciatis, quisquam officia et dolores suscipit sapiente.
-                                <p class="center">
+                                <p class="centered">
                                     <button type="button" class="btn btn-primary">MORE INFO</button>
                                 </p>
                             </div>
