--- a/views/layout.html
+++ b/views/layout.html
@@ -1,11 +1,11 @@
 <div class="vert-layout contact-box">
     <div class="contain-flex">
         <div class="flex-row row-set">
-            <div class="col s6 layout-img">
-                Some info about the layout of the bar. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae, modi repudiandae quas adipisci vel omnis nesciunt, laborum suscipit et dolor vitae sequi asperiores, ipsa perferendis! Hic veritatis cupiditate ratione iste.
+            <div class="col s6 layout-col">
+                Three floors, each with their own individual bar, so you never have to worry about heading up and down stairs to have a good time. The 1<sup>st</sup> and 2<sup>nd</sup> floors are lounge areas, where you and your friends can find time to relax and get ready to head to the 3<sup>rd</sup> floor where the dancefloor/stage is - complete with dancers on their own platforms to add to the fun. Fun tip: don't forget to tip our dancers!
             </div>
             <div class="col s6 layout-img">
-                <img src="img/pubhome.jpg">
+                <img class="img-fit" src="img/bottomfloor.jpg">
             </div>
         </div>
     </div>
