--- a/css/style.css
+++ b/css/style.css
@@ -175,6 +175,20 @@ a:hover {
 }
 
 
+/* Layout Page */
+
+.layout-col,
+.layout-img {
+    align-self: center;
+    padding: 2em;
+}
+
+.layout-img {
+    width: 100%;
+    height: 100%;
+}
+
+
 /* Event Page */
 
 .event-page {
@@ -241,11 +255,6 @@ a:hover {
 .flex-row {
     justify-content: center;
     align-content: center;
-}
-
-.layout-img {
-    align-self: center;
-    padding: 2em;
 }
 
 .contained .row-set {
