--- a/views/navbar.html
+++ b/views/navbar.html
@@ -1,6 +1,6 @@
 <nav class="navi">
     <ul>
-        <li class="place-left"><a href="/">Home</a></li>
+        <li><a href="/">Home</a></li>
         <li><a href="/about">About</a></li>
         <li><a href="/events">Events</a></li>
         <li><a href="/gallery">Gallery</a></li>
