--- a/views/events.html
+++ b/views/events.html
@@ -1,23 +1,25 @@
 <div class="contain-flex">
     <div class="flex-row">
         <div class="vert-event event-page">
+            <h3 class="centered">June 2017</h3>
             <div class="contained">
-                <h4 class="centered">June</h4>
                 <div class="row-set">
                     <div class="col s12">
                         <div class="row-set">
                             <div class="col s12">
-                                Event
+                                <span class="event-title">Dillon Francis & Mord Fustang</span>
                             </div>
                         </div>
                         <div class="row-set event-row">
                             <div class="col s6 event-col">
-                                <img class="img-shrink" src="../img/buildinglayout.jpg">
+                                <img class="img-fit" src="../img/dillonfrancis.jpg" alt="dillon francis logo">
                             </div>
                             <div class="col s6 event-col">
-                                Description. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium facilis, a cumque perferendis, nobis quas sit ut dolorem, nihil dolorum laboriosam qui minus perspiciatis, quisquam officia et dolores suscipit sapiente.
+                                Date: 6/17
+                                <br> Time: 8pm to 2am
+                                <br>Doors Open 7:30pm
                                 <p class="centered">
-                                    <button type="button" class="btn btn-primary">MORE INFO</button>
+                                    <button type="button">MORE INFO</button>
                                 </p>
                             </div>
                         </div>
@@ -28,17 +30,19 @@
                     <div class="col s12">
                         <div class="row-set">
                             <div class="col s12">
-                                Event
+                                <span class="event-title">Diplo & Ru Paul </span>
                             </div>
                         </div>
                         <div class="row-set event-row">
                             <div class="col s6 event-col">
-                                <img class="img-shrink" src="../img/buildinglayout.jpg">
+                                <img class="img-shrink" src="../img/diplo.png" aly="diplo logo">
                             </div>
                             <div class="col s6 event-col">
-                                Description. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium facilis, a cumque perferendis, nobis quas sit ut dolorem, nihil dolorum laboriosam qui minus perspiciatis, quisquam officia et dolores suscipit sapiente.
+                                Date: 6/18
+                                <br> Time: 8pm to 2am
+                                <br>Doors Open 7:30pm
                                 <p class="centered">
-                                    <button type="button" class="btn btn-primary">MORE INFO</button>
+                                    <button type="button">MORE INFO</button>
                                 </p>
                             </div>
                         </div>
@@ -49,17 +53,19 @@
                     <div class="col s12">
                         <div class="row-set">
                             <div class="col s12">
-                                Event
+                                <span class="event-title">Yellow Claw & The Wiggles</span>
                             </div>
                         </div>
                         <div class="row-set event-row">
                             <div class="col s6 event-col">
-                                <img class="img-shrink" src="../img/buildinglayout.jpg">
+                                <img class="img-shrink" src="../img/yellow.png" alt="yellow claw logo">
                             </div>
                             <div class="col s6 event-col">
-                                Description. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium facilis, a cumque perferendis, nobis quas sit ut dolorem, nihil dolorum laboriosam qui minus perspiciatis, quisquam officia et dolores suscipit sapiente.
+                                Date: 6/23
+                                <br> Time: 8pm to 2am
+                                <br>Doors Open 7:30pm
                                 <p class="centered">
-                                    <button type="button" class="btn btn-primary">MORE INFO</button>
+                                    <button type="button">MORE INFO</button>
                                 </p>
                             </div>
                         </div>
@@ -70,38 +76,19 @@
                     <div class="col s12">
                         <div class="row-set">
                             <div class="col s12">
-                                Event
+                                <span class="event-title">Bingo Players & Lana Del Rey</span>
                             </div>
                         </div>
                         <div class="row-set event-row">
                             <div class="col s6 event-col">
-                                <img class="img-shrink" src="../img/buildinglayout.jpg">
+                                <img class="img-shrink" src="../img/bingo.png" alt="bingo players logo">
                             </div>
                             <div class="col s6 event-col">
-                                Description. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium facilis, a cumque perferendis, nobis quas sit ut dolorem, nihil dolorum laboriosam qui minus perspiciatis, quisquam officia et dolores suscipit sapiente.
+                                Date: 6/24
+                                <br> Time: 8pm to 2am
+                                <br>Doors Open 7:30pm
                                 <p class="centered">
-                                    <button type="button" class="btn btn-primary">MORE INFO</button>
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <hr>
-                <div class="row-set">
-                    <div class="col s12">
-                        <div class="row-set">
-                            <div class="col s12">
-                                Event
-                            </div>
-                        </div>
-                        <div class="row-set event-row">
-                            <div class="col s6 event-col">
-                                <img class="img-shrink" src="../img/buildinglayout.jpg">
-                            </div>
-                            <div class="col s6 event-col">
-                                Description. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium facilis, a cumque perferendis, nobis quas sit ut dolorem, nihil dolorum laboriosam qui minus perspiciatis, quisquam officia et dolores suscipit sapiente.
-                                <p class="centered">
-                                    <button type="button" class="btn btn-primary">MORE INFO</button>
+                                    <button type="button">MORE INFO</button>
                                 </p>
                             </div>
                         </div>
